--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,8 @@
 
     <body>
         <header>
-            PARROT CARD GAME
+            <p>PARROT CARD GAME</p>
+            <p id="clock">00:00:00</p>
         </header>
 
         <main>
