adicionando efeito de flip

--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,7 @@
             <p>PARROT CARD GAME</p>
             <p id="clock">00:00:00</p>
         </header>
-
-        <main>
-            
-        </main>
+        <main></main>
     </body>
     <script type="text/javascript" src="../src/parrots.js"></script>
 </html>
