--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8">
         <title>Parrots Card Game</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./styles/reset.css">
-        <link rel="stylesheet" href="./styles/styles.css">
+        <link rel="stylesheet" href="./public/styles/reset.css">
+        <link rel="stylesheet" href="./public/styles/styles.css">
     </head>
 
     <body>
@@ -15,5 +15,5 @@
         </header>
         <main></main>
     </body>
-    <script type="text/javascript" src="../src/parrots.js"></script>
+    <script type="text/javascript" src="./src/parrots.js"></script>
 </html>
